Fixed body margin and nav height on mobile with hidden subnavigation

--- a/app/views/widget/header/main.sass
+++ b/app/views/widget/header/main.sass
@@ -1,129 +1,135 @@
-body > header
-	+fixed( $top: 0, $right: 0, $left: 0 )
-	:background-color $color-neutral
-	:z-index 10
+body
+	:margin-top $header-navigation-height
 
-	/*
-	 * Header shadow
-	 */
-	&:after
-		+absolute( $top: 100%, $right: 0, $left: 0 )
-		:background rgba( $color-main, 0.08 )
-		:content ''
-		:height rem( 8px )
+	.subnavigation &
+		:margin-top $header-navigation-height + $header-subnavigation-height
 
-	h1
-		+absolute( $left: $spacing )
-		:z-index 1
-
-		&, a
-			:display block
-			:height $header-navigation-height
-
-		.logo
-			+icon
-				+font-size( 120px, $header-navigation-height )
-			:color $color-main
-			:vertical-align top
-
-			&:hover
-				:color $color-highlight
-
-	/*
-	 * Header navigation
-	 */
-	nav
-		:height $header-navigation-height
-		:overflow hidden
-		:position relative
-		:text-align right
-
-		.subnavigation &
-			:animation subnavigation 1 $transition-effect $transition-duration * 2
-			:height $header-navigation-height + $header-subnavigation-height
-
-		ul
-			:padding 0 $spacing
-
-		li, a
-			:display inline-block
-			:height $header-navigation-height
-
-		.hamburger, > ul > li > a
-			:position relative
+	> header
+		+fixed( $top: 0, $right: 0, $left: 0 )
+		:background-color $color-neutral
+		:z-index 10
+	
+		/*
+		 * Header shadow
+		 */
+		&:after
+			+absolute( $top: 100%, $right: 0, $left: 0 )
+			:background rgba( $color-main, 0.08 )
+			:content ''
+			:height rem( 8px )
+	
+		h1
+			+absolute( $left: $spacing )
 			:z-index 1
-
-			&:after
-				+absolute( 0, 0, 100%, 0 )
-				:background-color $color-highlight
-				:content ''
-				:transition bottom $transition-duration $transition-effect
-				:z-index -1
-
-			&:hover, &.selected
-				:color $color-neutral
-
-				&:after
-					:bottom 0
-
-			&:active, &.selected
-				&:after
-					:transition background-color $transition-duration $transition-effect
-					:background-color $color-main
-
+	
+			&, a
+				:display block
+				:height $header-navigation-height
+	
+			.logo
+				+icon
+					+font-size( 120px, $header-navigation-height )
+				:color $color-main
+				:vertical-align top
+	
+				&:hover
+					:color $color-highlight
+	
 		/*
-		 * Hamburger button
+		 * Header navigation
 		 */
-		.hamburger
-			:display none
-
-		/*
-		 * Main navigation
-		 */
-		> ul
+		nav
+			:height $header-navigation-height
+			:overflow hidden
+			:position relative
 			:text-align right
 
-			> li
-				&:first-child
-					:display none
+			.subnavigation &
+				:animation subnavigation 1 $transition-effect $transition-duration * 2
+				:height $header-navigation-height + $header-subnavigation-height
 
-				> a
-					@extend %font-headline
-					+font-size( 22px, false )
-					:color $color-main
-					:padding 0 $spacing * 0.5
-					:line-height $header-navigation-height
+			ul
+				:padding 0 $spacing
 
-					&.disabled
-						:color rgba( $color-main, 0.6 )
-
-					&.selected
-						& ~ ul
-							:display block
-
-		/*
-		 * Sub navigation
-		 */
-		> ul ul
-			@extend %content-width
-			+stretched-background( $color-main )
-			+absolute( $top: $header-navigation-height, $right: 0, $left: 0 )
-			:display none
-			:height $header-subnavigation-height
-			:margin 0 auto
-			:text-align center
-
-			li
-				:width percentage( 1 / 3 )
-
-			a
-				@extend %font-headline
-				:color $color-neutral
-				:line-height $header-subnavigation-height
-				:font-weight 300
-
+			li, a
+				:display inline-block
+				:height $header-navigation-height
+	
+			.hamburger, > ul > li > a
+				:position relative
+				:z-index 1
+	
+				&:after
+					+absolute( 0, 0, 100%, 0 )
+					:background-color $color-highlight
+					:content ''
+					:transition bottom $transition-duration $transition-effect
+					:z-index -1
+	
 				&:hover, &.selected
-					:color $color-highlight
+					:color $color-neutral
+	
+					&:after
+						:bottom 0
+	
+				&:active, &.selected
+					&:after
+						:transition background-color $transition-duration $transition-effect
+						:background-color $color-main
+	
+			/*
+			 * Hamburger button
+			 */
+			.hamburger
+				:display none
+	
+			/*
+			 * Main navigation
+			 */
+			> ul
+				:text-align right
+	
+				> li
+					&:first-child
+						:display none
+	
+					> a
+						@extend %font-headline
+						+font-size( 22px, false )
+						:color $color-main
+						:padding 0 $spacing * 0.5
+						:line-height $header-navigation-height
+	
+						&.disabled
+							:color rgba( $color-main, 0.6 )
+	
+						&.selected
+							& ~ ul
+								:display block
+	
+			/*
+			 * Sub navigation
+			 */
+			> ul ul
+				@extend %content-width
+				+stretched-background( $color-main )
+				+absolute( $top: $header-navigation-height, $right: 0, $left: 0 )
+				:display none
+				:height $header-subnavigation-height
+				:margin 0 auto
+				:text-align center
+	
+				li
+					:width percentage( 1 / 3 )
+	
+				a
+					@extend %font-headline
+					:color $color-neutral
+					:line-height $header-subnavigation-height
+					:font-weight 300
+	
+					&:hover, &.selected
+						:color $color-highlight
 
 @keyframes subnavigation
 	0%
